# painter-robot-esp32

./: .clang-format  .gitignore  CMakeLists.txt  README.md  partitions.csv
ExampleCode/: A4988.cpp  A4988.h  Código válvula solenoide.txt  Motor.ino  abertura_ciclo.rar  config.h
bddTest/: CMakeLists.txt
docs/: notas.md
main/: CMakeLists.txt  NvsHandler.cpp  NvsHandler.h  PressureSensor.cpp  PressureSensor.h  StepMotor.cpp  StepMotor.h  SystemStateLed.cpp  SystemStateLed.h  WifiConfig.cpp  WifiConfig.h  conectwifi.html  data_command.cpp  data_command.h  data_command_event.cpp  data_command_event.h  end_stop_sensor.cpp  end_stop_sensor.h  low_high.h  main.cpp  motor.ino  mqtt.cpp  mqtt.h  painter-robot-esp32.c  painter-robot-esp32.cpp  pins.h  queue-example.h  queue.h  relay.cpp  relay.h  rele.cpp  rele.h  tag.h  test_gptimer.h  wifi_config.h
main/bddTest/: CMakeLists.txt  StepMotorTest.cpp
